--- a/Scientific-Calculator/Resources/Styles/Styles.xaml
+++ b/Scientific-Calculator/Resources/Styles/Styles.xaml
@@ -16,7 +16,7 @@
         <Setter Property="RowSpacing" Value="0"/>
         <Setter Property="ColumnSpacing" Value="0"/>
         <Setter Property="VerticalOptions" Value="Fill"/>
-        <Setter Property="HorisontalOptions" Value="Fill"/>
+        <Setter Property="HorizontalOptions" Value="Fill"/>
         <Setter Property="BackgroundColor" Value="Transparent"/>
     </Style>
 
